# inference

./: pyproject.toml
xinference/model/embedding/: __init__.py
xinference/model/rerank/: __init__.py  core.py  rerank_family.py
xinference/model/rerank/flag/: core.py
xinference/model/rerank/flag/tests/: test_flag_reranker.py
xinference/model/rerank/sentence_transformers/: core.py
xinference/model/rerank/sentence_transformers/tests/: test_transformers_reranker.py
xinference/model/rerank/tests/: worring.txt
xinference/model/rerank/transformers/: core.py
xinference/model/rerank/vllm/: core.py
xinference/model/rerank/vllm/tests/: test_vllm_reranker.py
