[project]
name = "inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xoscar",
    "torch",
    "gradio",
    "pillow",
    "click<8.2.0",
    "tqdm>=4.27",
    "tabulate",
    "requests",
    "aiohttp",
    "pydantic",
    "fastapi>=0.110.3",
    "uvicorn",
    "huggingface-hub>=0.19.4",
    "typing_extensions",
    "modelscope>=1.19.0",
    "sse_starlette>=1.6.5", # ensure_bytes API break change: https://github.com/sysid/sse-starlette/issues/65,
    "openai>=1.40.0", # For typing
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "aioprometheus[starlette]>=23.12.0",
    "nvidia-ml-py",
    "pynvml>=12",
    "async-timeout",
    "peft",
    "timm",
    "setproctitle",
    "pytest>=8.4.1",
    "tiktoken>=0.9.0",
    "protobuf>=6.31.1",
]
